bug z-index banner hero fixed

--- a/app/static/css/main/banner.css
+++ b/app/static/css/main/banner.css
@@ -46,7 +46,7 @@ p {
 }
 
 .banner--hero h1 + p {
-  z-index:99999;
+  z-index:9;
   position: relative;
 }
 
